--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -326,6 +326,23 @@
 
                                                 <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
                                                 @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
+
+                                                <li class="dropdown">
+                                                    <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                                                        Psychological Evaluation<i class="fa fa-angle-right"></i>
+                                                    </a>
+                                                    <ul class="dropdown-menu" role="menu" style="left: 226px;top: -3px;">
+                                                        <li><a href="@Url.Action("LocusOfControl", "PsychologicalEvaluation")" style="border:none;">Locus Of Control </a></li>
+                                                        <li><a href="@Url.Action("InstructionsForPSSFinal", "PsychologicalEvaluation")" style="border:none;">Instructions For PSS Final</a></li>
+                                                        <li><a href="@Url.Action("MASSMindfulnessScaleFinal", "PsychologicalEvaluation")" style="border:none;">MASS Mindfulness Scale Final </a></li>
+                                                        <li><a href="@Url.Action("BeckDepressionInventoryIIFinal", "PsychologicalEvaluation")" style="border:none;">Beck Depression Inventory II Final </a></li>
+                                                        <li><a href="@Url.Action("PSQ30_PERCIEVED_STRESS_QUESTIONAIRE", "PsychologicalEvaluation")" style="border:none;">PSQ30_PERCIEVED_STRESS_QUESTIONAIRE </a></li>
+                                                        <li><a href="@Url.Action("ROSENBERG_SELF_esteem_scale_final", "PsychologicalEvaluation")" style="border:none;">ROSENBERG_SELF_esteem_scale_final </a></li>
+                                                        <li><a href="@Url.Action("Zhao_ANXIETY", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY </a></li>
+                                                        <li><a href="@Url.Action("EmotionalIntelligenceQuizForLeadership", "PsychologicalEvaluation")" style="border:none;">Emotional Intelligence Quiz For Leadership </a></li>
+                                                    </ul>
+                                                </li>
+
                                             </ul>
 
                                         </li>
@@ -460,6 +477,23 @@
 
                                                 <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
                                                 @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
+
+                                                <li class="dropdown">
+                                                    <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+                                                        Psychological Evaluation<i class="fa fa-angle-right"></i>
+                                                    </a>
+                                                    <ul class="dropdown-menu" role="menu" style="left: 226px;top: -3px;">
+                                                        <li><a href="@Url.Action("LocusOfControl", "PsychologicalEvaluation")" style="border:none;">Locus Of Control </a></li>
+                                                        <li><a href="@Url.Action("InstructionsForPSSFinal", "PsychologicalEvaluation")" style="border:none;">Instructions For PSS Final</a></li>
+                                                        <li><a href="@Url.Action("MASSMindfulnessScaleFinal", "PsychologicalEvaluation")" style="border:none;">MASS Mindfulness Scale Final </a></li>
+                                                        <li><a href="@Url.Action("BeckDepressionInventoryIIFinal", "PsychologicalEvaluation")" style="border:none;">Beck Depression Inventory II Final </a></li>
+                                                        <li><a href="@Url.Action("PSQ30_PERCIEVED_STRESS_QUESTIONAIRE", "PsychologicalEvaluation")" style="border:none;">PSQ30_PERCIEVED_STRESS_QUESTIONAIRE </a></li>
+                                                        <li><a href="@Url.Action("ROSENBERG_SELF_esteem_scale_final", "PsychologicalEvaluation")" style="border:none;">ROSENBERG_SELF_esteem_scale_final </a></li>
+                                                        <li><a href="@Url.Action("Zhao_ANXIETY", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY </a></li>
+                                                        <li><a href="@Url.Action("EmotionalIntelligenceQuizForLeadership", "PsychologicalEvaluation")" style="border:none;">Emotional Intelligence Quiz For Leadership </a></li>
+                                                    </ul>
+                                                </li>
+
                                             </ul>
                                         </li>
 
