--- a/TM.RestHour/Views/PsychologicalEvaluation/BeckDepressionInventoryIIFinal.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/BeckDepressionInventoryIIFinal.cshtml
@@ -519,27 +519,27 @@
                         <span style="font-family:Candara;font-size:14pt;">I have not experienced any change in my sleeping. </span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q17.1a" name="q17.1" value="q17.1a">
+                        <input type="radio" id="17_1_1" name="q17_1" value="17_1_1">
                         <span style="font-family:Candara;font-size:14pt;">1a. I sleep somewhat more than usual.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q17.1b" name="q17.1" value="q17.1b">
+                        <input type="radio" id="17_1_2" name="q17_1" value="17_1_2">
                         <span style="font-family:Candara;font-size:14pt;">1b. I sleep somewhat less than usual.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q17.2a" name="q17.2" value="q17.2a">
+                        <input type="radio" id="17_2_1" name="q17_2" value="17_2_1">
                         <span style="font-family:Candara;font-size:14pt;">2a. I sleep a lot more than usual.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q17.2b" name="q17.2" value="q17.2b">
+                        <input type="radio" id="17_2_2" name="q17_2" value="17_2_2">
                         <span style="font-family:Candara;font-size:14pt;">2b. I sleep a lot less than usual.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q17.3a" name="q17.3" value="q17.3a">
+                        <input type="radio" id="17_3_1" name="q17_3" value="17_3_1">
                         <span style="font-family:Candara;font-size:14pt;">3a. I sleep most of the day.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q17.3b" name="q17.3" value="q17.3b">
+                        <input type="radio" id="17_3_2" name="q17_3" value="17_3_2">
                         <span style="font-family:Candara;font-size:14pt;">3b. I wake up 1-2 hours early and can't get back to sleep.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
@@ -588,27 +588,27 @@
                         <span style="font-family:Candara;font-size:14pt;">I have not experienced any change in my appetite.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q19.1a" name="q19.1" value="q19.1a">
+                        <input type="radio" id="19_1_1" name="q19_1" value="19_1_1">
                         <span style="font-family:Candara;font-size:14pt;">1a. My appetite is somewhat less than usual. </span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q19.1b" name="q19.1" value="q19.1b">
+                        <input type="radio" id="19_1_2" name="q19_1" value="19_1_2">
                         <span style="font-family:Candara;font-size:14pt;">1b. My appetite is somewhat greater than usual.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q19.2a" name="q19.2" value="q19.2a">
+                        <input type="radio" id="19_2_1" name="q19_2" value="19_2_1">
                         <span style="font-family:Candara;font-size:14pt;">2a. My appetite is much less than before.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q19.2b" name="q19.2" value="q19.2b">
+                        <input type="radio" id="19_2_2" name="q19_2" value="19_2_2">
                         <span style="font-family:Candara;font-size:14pt;">2b. My appetite is much greater than usual. </span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q19.3a" name="q19.3" value="q19.3a">
+                        <input type="radio" id="19_3_1" name="q19_3" value="19_3_1">
                         <span style="font-family:Candara;font-size:14pt;">3a. I have no appetite at all.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
-                        <input type="radio" id="q19.3b" name="q19.3" value="q19.3b">
+                        <input type="radio" id="19_3_2" name="q19_3" value="19_3_2">
                         <span style="font-family:Candara;font-size:14pt;">3b. I crave food all the time.</span>
                     </p>
                     <p style="margin-left:32.45pt;text-indent:-18pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;padding: 1pt 4pt;">
