--- a/TM.RestHour/Views/PsychologicalEvaluation/PSQ30_PERCIEVED_STRESS_QUESTIONAIRE.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/PSQ30_PERCIEVED_STRESS_QUESTIONAIRE.cshtml
@@ -149,9 +149,7 @@
                             </td>
                             <td style="border-top:0.75pt solid #000000;border-bottom:0.75pt solid #000000;border-left:0.75pt solid #000000;border-right:0.75pt solid #000000;padding-left:5.4pt;padding-right:5.4pt;width:38.85pt;vertical-align:top;">
                                 <p style="margin-left:0pt;margin-right:0pt;margin-top:0pt;margin-bottom:0pt;">
-                                    <span>
-
-                                    </span>
+                                    <span> <input type="radio" id="1_4" name="q1" value="1_4"></span>
                                 </p>
                             </td>
                         </tr>
