--- a/TM.RestHour/Views/PsychologicalEvaluation/EmotionalIntelligenceQuizForLeadership.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/EmotionalIntelligenceQuizForLeadership.cshtml
@@ -902,7 +902,7 @@
 
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSave321991584EmotionalIntelligenceQuizForLeadership', 'validate_EmotionalIntelligenceQuizForLeadership');">Save And Next</button>
+                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSave321991584EmotionalIntelligenceQuizForLeadership', '8');">Save And Next</button>
                 </div>
 
             </div>
