--- a/TM.RestHour/Views/PsychologicalEvaluation/BeckDepressionInventoryIIFinal.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/BeckDepressionInventoryIIFinal.cshtml
@@ -829,7 +829,7 @@
 
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveBeck_Depression_Inventory_IIFinal', 'validate_BeckDepressionInventoryIIFinal');">Save And Next</button>
+                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveBeck_Depression_Inventory_IIFinal', '4');">Save And Next</button>
                 </div>
 
             </div>
