--- a/TM.RestHour/Views/PsychologicalEvaluation/InstructionsForPSSFinal.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/InstructionsForPSSFinal.cshtml
@@ -637,7 +637,7 @@
 
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveInstructionsForPSSFinal', 'validate_InstructionsForPSSFinal');">Save And Next</button>
+                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveInstructionsForPSSFinal', '2');">Save And Next</button>
                 </div>
 
             </div>
