--- a/TM.RestHour/Views/PsychologicalEvaluation/LocusOfControl.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/LocusOfControl.cshtml
@@ -333,7 +333,7 @@
                 </section>
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveLocusOfControl', 'validate_LocusOfControl');">Save And Next</button>
+                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveLocusOfControl', '1');">Save And Next</button>
                 </div>
 
             </div>
