--- a/TM.RestHour/Views/PsychologicalEvaluation/MASSMindfulnessScaleFinal.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/MASSMindfulnessScaleFinal.cshtml
@@ -1048,7 +1048,7 @@
 
 
             <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveMASSMindfulnessScaleFinal', 'validate_MASSMindfulnessScaleFinal');">Save And Next</button>
+                <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveMASSMindfulnessScaleFinal', '3');">Save And Next</button>
             </div>
 
             </div>
