--- a/TM.RestHour/Views/PsychologicalEvaluation/PSQ30_PERCIEVED_STRESS_QUESTIONAIRE.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/PSQ30_PERCIEVED_STRESS_QUESTIONAIRE.cshtml
@@ -1166,7 +1166,7 @@
 
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSavePSQ30_PERCIEVED_STRESS_QUESTIONAIRE', 'validate_PSQ30_PERCIEVED_STRESS_QUESTIONAIRE');">Save And Next</button>
+                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSavePSQ30_PERCIEVED_STRESS_QUESTIONAIRE', '5');">Save And Next</button>
                 </div>
 
             </div>
