--- a/TM.RestHour/Views/PsychologicalEvaluation/ROSENBERG_SELF_esteem_scale_final.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/ROSENBERG_SELF_esteem_scale_final.cshtml
@@ -758,7 +758,7 @@
 
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveROSENBERG_SELF_Esteem_scale_final', 'validate_ROSENBERG_SELF_esteem_scale_final');">Save And Next</button>
+                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveROSENBERG_SELF_Esteem_scale_final', '6');">Save And Next</button>
                 </div>
 
             </div>
