--- a/TM.RestHour/Views/PsychologicalEvaluation/Zhao_ANXIETY.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/Zhao_ANXIETY.cshtml
@@ -921,7 +921,7 @@
 
 
                 <div class="col-md-3" style="padding: 10px; margin-top:68px;">
-                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveZhaoANXIETY', 'validate_Zhao_ANXIETY');">Save And Next</button>
+                    <button type="button" class="button1" id="btnAddAndSave" onclick="return SaveForms('stpSaveZhaoANXIETY', '7');">Save And Next</button>
                 </div>
 
             </div>
