--- a/TM.RestHour/Views/PsychologicalEvaluation/EmotionalIntelligenceQuizForLeadership.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/EmotionalIntelligenceQuizForLeadership.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "EmotionalIntelligenceQuizForLeadership";
 }
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
-@Html.Hidden("Save_EmotionalIntelligenceQuizForLeadership", @Url.Action("SaveForms", "PsychologicalEvaluation"))
+@Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
 <form id="myForm1">
 
     <div class="row">
