--- a/TM.RestHour/Views/PsychologicalEvaluation/PSQ30_PERCIEVED_STRESS_QUESTIONAIRE.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/PSQ30_PERCIEVED_STRESS_QUESTIONAIRE.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "PSQ30_PERCIEVED_STRESS_QUESTIONAIRE";
 }
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
-@Html.Hidden("Save_PSQ30_PERCIEVED_STRESS_QUESTIONAIRE", @Url.Action("SaveForms", "PsychologicalEvaluation"))
+@Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
 <form id="myForm1">
 
     <div class="row">
