--- a/TM.RestHour/Views/PsychologicalEvaluation/ROSENBERG_SELF_esteem_scale_final.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/ROSENBERG_SELF_esteem_scale_final.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "ROSENBERG_SELF_esteem_scale_final";
 }
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
-@Html.Hidden("Save_ROSENBERG_SELF_esteem_scale_final", @Url.Action("SaveForms", "PsychologicalEvaluation"))
+@Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
 <form id="myForm1">
 
     <div class="row">
