--- a/TM.RestHour/Views/PsychologicalEvaluation/Zhao_ANXIETY.cshtml
+++ b/TM.RestHour/Views/PsychologicalEvaluation/Zhao_ANXIETY.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Zhao_ANXIETY";
 }
 <script src="~/Scripts/PsychologicalEvaluation.js"></script>
-@Html.Hidden("Save_Zhao_ANXIETY", @Url.Action("SaveForms", "PsychologicalEvaluation"))
+@Html.Hidden("SaveForms", @Url.Action("SaveForms", "PsychologicalEvaluation"))
 <form id="myForm1">
 
     <div class="row">
