--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -165,7 +165,8 @@
                                                         <li><a href="@Url.Action("BeckDepressionInventoryIIFinal", "PsychologicalEvaluation")" style="border:none;">Beck Depression Inventory II Final </a></li>
                                                         <li><a href="@Url.Action("PSQ30_PERCIEVED_STRESS_QUESTIONAIRE", "PsychologicalEvaluation")" style="border:none;">PSQ30_PERCIEVED_STRESS_QUESTIONAIRE </a></li>
                                                         <li><a href="@Url.Action("ROSENBERG_SELF_esteem_scale_final", "PsychologicalEvaluation")" style="border:none;">ROSENBERG_SELF_esteem_scale_final </a></li>
-                                                        <li><a href="@Url.Action("Zhao_ANXIETY", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY </a></li>
+                                                        <li><a href="@Url.Action("Zhao_ANXIETY_Y1", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY_Y1 </a></li>
+                                                        <li><a href="@Url.Action("Zhao_ANXIETY_Y2", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY_Y2 </a></li>
                                                         <li><a href="@Url.Action("EmotionalIntelligenceQuizForLeadership", "PsychologicalEvaluation")" style="border:none;">Emotional Intelligence Quiz For Leadership </a></li>
                                                     </ul>
                                                 </li>
