--- a/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
+++ b/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
@@ -163,6 +163,14 @@
 
                         </div>
                     </div>
+
+                    <div class="col-md-12" style="padding-left:14px;">
+                        <div class="form-group">
+                            <label for="AllowPsychologyForms" style="padding:0;">Allow Psychology Forms</label>
+                            <input id="AllowPsychologyForms" type="checkbox" />
+
+                        </div>
+                    </div>
                 </div>
 
                 @*<div class="form-group" style="margin-bottom: 18px;">
