--- a/TM.RestHour/Views/Shared/_Layout.cshtml
+++ b/TM.RestHour/Views/Shared/_Layout.cshtml
@@ -154,7 +154,8 @@
                                                 </li>
                                                 <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
 
-                                                <li class="dropdown">
+
+                                                @*<li class="dropdown">
                                                     <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                                                         Psychological Evaluation<i class="fa fa-angle-right"></i>
                                                     </a>
@@ -169,7 +170,7 @@
                                                         <li><a href="@Url.Action("Zhao_ANXIETY_Y2", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY_Y2 </a></li>
                                                         <li><a href="@Url.Action("EmotionalIntelligenceQuizForLeadership", "PsychologicalEvaluation")" style="border:none;">Emotional Intelligence Quiz For Leadership </a></li>
                                                     </ul>
-                                                </li>
+                                                </li>*@
 
                                                 @*<li><a href="@Url.Action("Index", "UploadMedicalInventory")" style="border:none;">Upload Medical Inventory</a></li>*@
                                                 @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
@@ -328,7 +329,7 @@
                                                 <li class=""><a href='@Url.Action("Index", "Psychometrics")'>Psychometrics</a></li>
                                                 @*<li><a href="@Url.Action("Index", "MentalHealth")" style="border:none;">Mental Health</a></li>*@
 
-                                                <li class="dropdown">
+                                                @*<li class="dropdown">
                                                     <a tabindex="-1" href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
                                                         Psychological Evaluation<i class="fa fa-angle-right"></i>
                                                     </a>
@@ -342,7 +343,7 @@
                                                         <li><a href="@Url.Action("Zhao_ANXIETY", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY </a></li>
                                                         <li><a href="@Url.Action("EmotionalIntelligenceQuizForLeadership", "PsychologicalEvaluation")" style="border:none;">Emotional Intelligence Quiz For Leadership </a></li>
                                                     </ul>
-                                                </li>
+                                                </li>*@
 
                                             </ul>
 
@@ -490,7 +491,8 @@
                                                         <li><a href="@Url.Action("BeckDepressionInventoryIIFinal", "PsychologicalEvaluation")" style="border:none;">Beck Depression Inventory II Final </a></li>
                                                         <li><a href="@Url.Action("PSQ30_PERCIEVED_STRESS_QUESTIONAIRE", "PsychologicalEvaluation")" style="border:none;">PSQ30_PERCIEVED_STRESS_QUESTIONAIRE </a></li>
                                                         <li><a href="@Url.Action("ROSENBERG_SELF_esteem_scale_final", "PsychologicalEvaluation")" style="border:none;">ROSENBERG_SELF_esteem_scale_final </a></li>
-                                                        <li><a href="@Url.Action("Zhao_ANXIETY", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY </a></li>
+                                                        <li><a href="@Url.Action("Zhao_ANXIETY_Y1", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY_Y1 </a></li>
+                                                        <li><a href="@Url.Action("Zhao_ANXIETY_Y2", "PsychologicalEvaluation")" style="border:none;">Zhao_ANXIETY_Y2 </a></li>
                                                         <li><a href="@Url.Action("EmotionalIntelligenceQuizForLeadership", "PsychologicalEvaluation")" style="border:none;">Emotional Intelligence Quiz For Leadership </a></li>
                                                     </ul>
                                                 </li>
