--- a/TM.RestHour/Views/ReportsNCReportByMonth/NCReportByMonth.cshtml
+++ b/TM.RestHour/Views/ReportsNCReportByMonth/NCReportByMonth.cshtml
@@ -101,6 +101,14 @@
                 </table>*@
             <div class="card">
 
+
+                <div class="col-md-7" id="sideform">
+                    <div class="form-group">
+                        @*<label for="ReportsDate"> Date</label>*@
+                        <input type="text" class="monthYearPicker form-control" id="ReportsDate" placeholder="Select Month" />
+                    </div>
+                </div>
+
                 <table border="1" style="  border-style: solid; border-width: 1px; border-collapse: collapse; border-spacing: 0; width: 100%; font-weight: bold;" id="schedule">
                     <thead>
                         <tr style="font-weight: bold;">
