--- a/TM.RestHour/Views/CrewList/CrewListNew.cshtml
+++ b/TM.RestHour/Views/CrewList/CrewListNew.cshtml
@@ -101,6 +101,7 @@
                                                             <th>Name</th>
                                                             <th>RankName</th>
                                                             <th>StartDate</th>
+                                                            <th>EndDate</th>
                                                             <th>Edit</th>
                                                             <th>Deactivate</th>
                                                         </tr>
@@ -126,6 +127,7 @@
                                                             <th>Name</th>
                                                             <th>RankName</th>
                                                             <th>StartDate</th>
+                                                            <th>EndDate</th>
                                                             <th>Edit</th>
                                                         </tr>
                                                     </thead>
