Create user login on login btn from crew list grid; upload Joining medical confirm after Add/Update crew;

--- a/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
+++ b/TM.RestHour/Views/AddCrew/AddEditCrew.cshtml
@@ -185,7 +185,46 @@
 
             </div>
         </div>
+        @*<div class="col-sm-6">
 
+            <div class="form-group">
+    <div id="myModalJoiningMedical">
+        <div class="modal-dialog" style="width:500px;">
+            <div class="modal-content">
+                <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal">&times;</button>
+            <h4 class="modal-title" id="myModalLabel">Joining Medical</h4>
+    </div>
+    <div class="modal-dialog" id="dvuserdetailsn" style="width: 490px;">
+        <fieldset class="for-panel">
+            <legend>Upload</legend>
+            <div class="row">
+
+                <div class="col-sm-3" style="width: 4%;">
+                    <div class="form-horizontal">
+                        <label class="col-xs-5 control-label"></label>
+                    </div>
+                </div>
+                <input id="upload" name="upload" type="file" accept="application/pdf,image/gif, image/jpeg"/>
+                <button  type="button" class="buttonpop" onclick="  uploadFile($('#upload'));" style="width:86px;">Upload</button>
+                <div class="form-group">
+                    <input type="hidden" id="PhotoUploadID" class="form-control" />
+                </div>
+            </div>
+        </fieldset>
+    </div>
+    <div class="modal-footer">
+        <button type="button" class="buttonpop" id="btnAdd" onclick="return Add();" style="width:86px;">Add</button>
+           
+            <button type="button" class="btn btn-default" data-dismiss="modal" style="width:86px;">Close</button>
+            </div>
+            </div>
+            </div>
+        </div>
+    </div>
+            
+
+        </div>*@
 
 
 
@@ -208,12 +247,12 @@
             <div>&nbsp;</div>
         </div>
 
-        <div class="col-sm-3">
+        @*<div class="col-sm-3">
             <div class="form-group" style="margin-bottom: 18px;">
                 <button type="button" class="button1" id="btnAdd1" onclick="return AddCrewEdit();" style="display:none; width:120px; float: right;">More Settings</button>
             </div>
             <div>&nbsp;</div>
-        </div>
+        </div>*@
 
 
 
