--- a/TM.RestHour/Views/CrewList/CrewListNew.cshtml
+++ b/TM.RestHour/Views/CrewList/CrewListNew.cshtml
@@ -133,6 +133,7 @@
                                                 @Html.Hidden("newurl", @Url.Action("Index", "AddCrew"))
                                                 @Html.Hidden("newurl1", @Url.Action("UpdateInActive", "CrewList"))
                                                 @Html.Hidden("crewlisturl", @Url.Action("CrewListNew", "CrewList"))
+                                                @Html.Hidden("createNewLogin", @Url.Action("CreateNewCrewLogin", "AddCrew"))
                                                 <input type="hidden" id="hdncount" />
                                                 <input type="hidden" id="hdnrole" />
                                                 <table id="CrewListtable" class="display" style="width:100%">
